# PokeBot

./: .gitignore  .gitmodules  PokeBot.sln
PokeBot/: CMakeLists.txt  CMakeSettings.json  PokeBot.vcxproj  Source.cpp
PokeBot/Content/: PokemonList.csv
PokeBot/Content/Regions/: Kanto.txt
PokeBot/Content/Servers/865696840996093983/: 334082047368888344  352152116686749696  702334554953744415  736613228653576245
PokeBot/Event/: Encounter.cpp  Encounter.h  Event.h  Release.cpp  Release.h
PokeBot/Map/: Area.cpp  Area.h  Generator.cpp  Generator.h  Region.cpp  Region.h
PokeBot/Pokemon/: Encounter.cpp  Encounter.h  Evolution.cpp  Evolution.h  PokemonDatabase.cpp  PokemonDatabase.h  PokemonInstance.cpp  PokemonInstance.h
PokeBot/SleepyHandler/: Evolution.cpp  Evolution.h  PokeBotClient.cpp  PokeBotClient.h
PokeBot/Users/: Server.cpp  Server.h  User.cpp  User.h
